// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CartTitle stories snapshot > EmptyCart story renders and matches snapshot 1`] = `
<div>
  <div
    class="flex items-center gap-2 mb-6"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-info w-4.5 h-4.5 text-foreground shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M12 16v-4"
      />
      <path
        d="M12 8h.01"
      />
    </svg>
    <div>
      <h2
        class="text-lg-xl font-medium text-foreground"
      >
        Delivery - 0 out of 0 items
      </h2>
    </div>
  </div>
</div>
`;

exports[`CartTitle stories snapshot > LargeItemCount story renders and matches snapshot 1`] = `
<div>
  <div
    class="flex items-center gap-2 mb-6"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-info w-4.5 h-4.5 text-foreground shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M12 16v-4"
      />
      <path
        d="M12 8h.01"
      />
    </svg>
    <div>
      <h2
        class="text-lg-xl font-medium text-foreground"
      >
        Delivery - 1 out of 1 items
      </h2>
    </div>
  </div>
</div>
`;

exports[`CartTitle stories snapshot > SingleAndMultipleItems story renders and matches snapshot 1`] = `
<div>
  <div
    class="flex flex-col gap-8"
  >
    <div>
      <p
        class="text-sm text-muted-foreground mb-2"
      >
        Single item:
      </p>
      <div
        class="flex items-center gap-2 mb-6"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-info w-4.5 h-4.5 text-foreground shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
        <div>
          <h2
            class="text-lg-xl font-medium text-foreground"
          >
            Delivery - 1 out of 1 items
          </h2>
        </div>
      </div>
    </div>
    <div>
      <p
        class="text-sm text-muted-foreground mb-2"
      >
        Multiple items:
      </p>
      <div
        class="flex items-center gap-2 mb-6"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-info w-4.5 h-4.5 text-foreground shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
        <div>
          <h2
            class="text-lg-xl font-medium text-foreground"
          >
            Delivery - 3 out of 2 items
          </h2>
        </div>
      </div>
    </div>
  </div>
</div>
`;
